--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nomiclabs/hardhat-ethers": "2.0.4",
     "@nomiclabs/hardhat-waffle": "2.0.2",
     "@openzeppelin/contracts": "4.4.2",
+    "@openzeppelin/contracts-upgradeable": "4.5.1",
     "@typechain/ethers-v5": "9.0.0",
     "@typechain/hardhat": "4.0.0",
     "@types/chai": "4.3.0",
@@ -36,7 +37,6 @@
     "ethereum-waffle": "3.4.0",
     "ethers": "5.5.3",
     "fs-extra": "10.0.0",
-    "gitpkg": "https://github.com/0xProject/gitpkg.git",
     "hardhat": "2.8.3",
     "hardhat-contract-sizer": "2.4.0",
     "hardhat-deploy": "0.9.26",
@@ -81,14 +81,6 @@
     "prettier": "prettier --config ./.prettierrc.yaml --write \"**/*.{js,json,md,sol,ts}\"",
     "prettier:check": "prettier --check --config ./.prettierrc.yaml \"**/*.{js,json,md,sol,ts}\"",
     "test": "hardhat test",
-    "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain",
-    "build": "rm -rf dist && tsc -b && copyfiles -u 1 \"typechain/**/*.d.ts\" dist/typechain",
-    "publish:private": "yarn build && gitpkg publish"
-  },
-  "gitpkg": {
-    "registry": "git@github.com:Sotatek-DucPham/gitpkg-registry.git"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts-upgradeable": "^4.5.1"
+    "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain"
   }
 }
