fix: audit report

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ RESERVE_REWARDS_WALLET=0xfa4eCa6D583a825B80146B87d10EB24fa79EEdCb
 REWARDS_WALLET=0x7C06196E7509054604fB5E46Ec35773fB71756f5
 RESERVE_LIQUIDITY_WALLET=0x86DFD8b687A6fc6A69F919eFd1aE0064109c49A0
 ZEROXBLOCKS_OWNER=0x1bfDd534096214f62F70724A1c46CA4C83912e62
+ETHERSCAN_API_KEY=<your-ETHERSCAN_API_KEY>
