--- a/package.json
+++ b/package.json
@@ -84,6 +84,18 @@
     "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain"
   },
   "dependencies": {
-    "@nomiclabs/hardhat-etherscan": "^3.0.3"
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "ansi-regex": "6.0.1",
+    "async": "3.2.2",
+    "follow-redirects": "1.14.8",
+    "json-schema": "0.4.0",
+    "lodash": "4.17.21",
+    "marked": "4.0.10",
+    "minimist": "1.2.6",
+    "nanoid": "3.1.31",
+    "node-fetch": "3.1.1",
+    "simple-get": "2.8.2",
+    "underscore": "1.12.1",
+    "yargs-parser": "15.0.1"
   }
 }
