feat: add zap to deployment flow

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ LIQUIDITY_POOL_WALLET=0x9F25F286ccF3F82a80fFd6F897D403A9b151b1A0
 TREASURY_WALLET=0x3e513b088339aB233d0F712910f4c60E402cd408
 REWARDS_WALLET=0x3299dcc8A7f12E12C3D4F81E3a348055c0A4c381
 RESERVE_LIQUIDITY_WALLET=0x9F25F286ccF3F82a80fFd6F897D403A9b151b1A0
+WRAPPED_NATIVE=0xc778417e063141139fce010982780140aa0cd5ab
